Add admin/events page (#13)
