# api/v1/api.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"github.com/labstack/echo/v4"
+	"github.com/labstack/echo/v4/middleware"
 
 	"github.com/palembang-digital/website/pkg/services"
 )
@@ -10,12 +11,18 @@ import (
 // them using the provided storage.
 type API struct {
 	eventsService services.EventsService
+
+	adminUsername string
+	adminPassword string
 }
 
 // NewAPI returns an initialized API type.
-func NewAPI(eventsService services.EventsService) *API {
+func NewAPI(eventsService services.EventsService, adminUsername, adminPassword string) *API {
 	return &API{
 		eventsService: eventsService,
+
+		adminUsername: adminUsername,
+		adminPassword: adminPassword,
 	}
 }
 
@@ -24,5 +31,13 @@ func (api *API) Register(g *echo.Group) {
 	// Events API
 	g.GET("/events", api.listEvents)
 	g.GET("/events/:id", api.getEvent)
-	g.POST("/events", api.createEvent)
+	g.POST("/events", api.createEvent, middleware.BasicAuth(api.adminValidator))
+	g.DELETE("/events/:id", api.deleteEvent, middleware.BasicAuth(api.adminValidator))
+}
+
+func (api *API) adminValidator(username, password string, c echo.Context) (bool, error) {
+	if username == api.adminUsername && password == api.adminPassword {
+		return true, nil
+	}
+	return false, nil
 }
